# passwd-simulate

./: Cargo.toml
src/: main.rs  passwd.rs
src/crypt/: bcrypt.rs  md5_crypt.rs  mod.rs  salt.rs  sha256_crypt.rs  sha512_crypt.rs
src/store/: mod.rs  shadow.rs
