[package]
name = "passwd-simulate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mypasswd"
path = "src/passwd.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.3.3", features = ["derive"] }
digest = "0.10.7"
md-5 = "0.10.5"
rand = "0.8.5"
rpassword = "7.2.0"
sha2 = "0.10.6"
users = "0.11.0"

[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true
